# wan-party-bot

./: .gitignore  Cargo.toml  Pipfile  blacklist.py  build.rs  build.sh  chat.py  client.py  cloudbuild.yaml  comeback.py  commands.py  count_syllables_discord.py  dick.py  get_error_message.py  giphy.py  jokes.py  kindness.py  leaderboards.py  lexical_analysis.py  lexical_constants.py  main.py  markov_haiku_discord.py  messageHandler.py  message_handler.py  poll.py  prep_corpus_to_dict.py  pyproject.toml  quote.py  randomFunThings.py  reaction.py  readme.md  requirements.txt  rhymes.py  rust-toolchain.toml  sing.py  summarize.py  tables.py  tags  test_haiku.py  test_reaction.py  (+4 more)
.github/workflows/: deploy.yml
corpora/cmudict/: rhymes.py
data/: clone-wars-quotes.txt  dick.txt  dwarfs.txt  error_messages.txt  item_desc.txt  items.txt  merchants.txt  rick.txt  summa.txt
src/: blacklist.rs  chat.rs  client.rs  cmudict.rs  commands.rs  count_syllables.rs  db.rs  discord_util.rs  error_messages.rs  giphy.rs  jokes.rs  leaderboards.rs  lexical_analysis.rs  lexical_constants.rs  lib.rs  main.rs  markov_haiku.rs  memory.rs  message_handler.rs  poll.rs  quote.rs  quotes.rs  reaction.rs  rhymes.rs  sing.rs  text_util.rs  thinking.rs
tests/: fidelity.rs
